# argilla_dataset_manager

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  testing.ipynb
.github/workflows/: publish.yml  test.yml
argilla_dataset_manager/: __init__.py
argilla_dataset_manager/utils/: argilla_client.py  dataset_manager.py
datasets/: settings_manager.py
examples/: dataset_management.py  dataset_management_tutorial.py
my_datasets/: __init__.py  dataset_settings.py  settings_manager.py
scripts/: build_and_publish.py
tests/: test_dataset_operations.py
utils/: __init__.py  argilla_client.py  data_loader.py  data_processor.py  dataset_manager.py  logger.py
~/: .pypirc
