[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argilla-dataset-manager"
version = "0.1.7"
authors = [
  { name="Jordan Burger", email="your.email@example.com" },
]
description = "A Python package for managing and uploading datasets to Argilla"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argilla>=1.0.0",
    "pandas>=1.0.0",
    "python-dotenv>=0.10.0",
    "requests>=2.0.0",
    "pyyaml>=5.0.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "types-PyYAML>=5.0.0",
    "types-requests>=2.0.0",
    "types-tqdm>=4.0.0",
    "types-setuptools>=60.0.0",
    "pandas-stubs>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jordanrburger/argilla_dataset_manager"
"Bug Tracker" = "https://github.com/jordanrburger/argilla_dataset_manager/issues" 